# cmd/api/posts.go
@@ -16,10 +16,28 @@ type CreatePostPayload struct {
 	Tags    []string `json:"tags"`
 }
 
+type UpdatePostPayload struct {
+	Title   string `json:"title" validate:"omitempty,max=100"`
+	Content string `json:"content" validate:"omitempty,max=1000"`
+}
+
 type PostKey string
 
 const postCtx PostKey = "post"
 
+// CreatePost godoc
+//
+//	@Summary		Create a post
+//	@Description	Create a post with payload
+//	@Tags			posts
+//	@Accept			json
+//	@Product		json
+//	@Param			payload	body		CreatePostPayload	true	"Create options"
+//	@Success		201		{string}	string				"Post created"
+//	@Failure		400		{object}	error				"Payload invalid"
+//	@Failure		500		{object}	error				"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/posts/ [post]
 func (app *application) createPostHandler(w http.ResponseWriter, r *http.Request) {
 	var payload CreatePostPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -54,6 +72,20 @@ func (app *application) createPostHandler(w http.ResponseWriter, r *http.Request
 	}
 }
 
+// GetUser godoc
+//
+//	@Summary		Fetches a post
+//	@Description	Fetches a post By ID
+//	@Tags			posts
+//	@Accept			json
+//	@Product		json
+//	@Param			id	path		int	true	"Post ID"
+//	@Success		200	{object}	store.Post
+//	@Failure		400	{object}	error
+//	@Failure		404	{object}	error
+//	@Failure		500	{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{id} [get]
 func (app *application) getPostHandler(w http.ResponseWriter, r *http.Request) {
 
 	post := getPostFromCtx(r)
@@ -73,6 +105,19 @@ func (app *application) getPostHandler(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// DeletePost godoc
+//
+//	@Summary		Deletes a post
+//	@Description	Deletes a post By ID
+//	@Tags			posts
+//	@Accept			json
+//	@Product		json
+//	@Param			id	path	int	true	"Post ID"
+//	@Success		204	"Success! No Content"
+//	@Failure		404	{object}	error
+//	@Failure		500	{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{id} [delete]
 func (app *application) deletePostHandler(w http.ResponseWriter, r *http.Request) {
 	idParam := chi.URLParam(r, "postID")
 	id, err := strconv.ParseInt(idParam, 10, 64)
@@ -95,12 +140,23 @@ func (app *application) deletePostHandler(w http.ResponseWriter, r *http.Request
 
 }
 
+// UpdatePost godoc
+//
+//	@Summary		Updates a post
+//	@Description	Updates a post By ID
+//	@Tags			posts
+//	@Accept			json
+//	@Product		json
+//	@Param			id		path		int					true	"Post ID"
+//	@Param			payload	body		UpdatePostPayload	true	"Update post payload"
+//	@Success		200		{object}	store.Post			"Post updated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{id} [patch]
 func (app *application) updatePostHandler(w http.ResponseWriter, r *http.Request) {
 	post := getPostFromCtx(r)
-	type UpdatePostPayload struct {
-		Title   string `json:"title" validate:"omitempty,max=100"`
-		Content string `json:"content" validate:"omitempty,max=1000"`
-	}
+
 	var payload UpdatePostPayload
 	if err := readJSON(w, r, &payload); err != nil {
 		app.badRequestResponse(w, r, err)
